# zano

./: .gitignore  Cargo.toml  LICENSE  README.md  data.txt  dev-to-blog.md  index.zn  input.txt  output.txt  package.json
examples/: arrays-objects.zn  async.zn  comprehensive.zn  console.zn  error-handling.zn  functions.zn  hello.zn  modules-demo.zn  modules.zn  server.zn  simple.zn  try-catch.zn  working-demo.zn
src/: main.rs  package.rs
src/parser/: lexer.rs  mod.rs
src/runtime/: mod.rs
src/runtime/modules/: mod.rs
test-examples/: analytics-final.zn  analytics-simple.zn  analytics.zn  api-server.zn  basic-syntax.zn  error-handling.zn  file-processor.zn  modules-test.zn
