[package]
name = "zano"
version = "0.1.1"
edition = "2021"
description = "A high-performance Node.js-like runtime built in Rust with JavaScript-compatible syntax, async support, and built-in modules"
authors = ["Samuel Aondo <sazalo101@gmail.com>"]
license = "MIT"
repository = "https://github.com/sazalo101/zano"
homepage = "https://github.com/sazalo101/zano"
documentation = "https://docs.rs/zano"
readme = "README.md"
keywords = ["javascript", "runtime", "node", "async", "backend"]
categories = ["command-line-utilities", "development-tools", "web-programming"]

[[bin]]
name = "zano"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
swc_ecma_parser = "0.140"
swc_ecma_ast = "0.110"
swc_common = "0.33"
reqwest = { version = "0.11", features = ["json"] }
hyper = { version = "0.14", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

[dev-dependencies]
tempfile = "3.0"
